# android_external_font_encodings

./: .cvsignore  .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  armscii-8.enc  autogen.sh  configure.ac  iso8859-11.enc  iso8859-6.16.enc  iso8859-6.8x.enc  meson.build  mulelao-1.enc  pre-commit.hook  suneu-greek.enc  tcvn-0.enc  tis620-2.enc  viscii1.1-1.enc
encodings-output/: Android.bp  adobe-dingbats.enc  adobe-standard.enc  adobe-symbol.enc  armscii-8.enc  ascii-0.enc  dec-special.enc  ibm-cp437.enc  ibm-cp850.enc  ibm-cp852.enc  ibm-cp866.enc  iso8859-11.enc  iso8859-13.enc  iso8859-14.enc  iso8859-16.enc  iso8859-6.16.enc  iso8859-6.8x.enc  microsoft-cp1250.enc  microsoft-cp1251.enc  microsoft-cp1252.enc  microsoft-cp1253.enc  microsoft-cp1254.enc  microsoft-cp1255.enc  microsoft-cp1256.enc  microsoft-cp1257.enc  microsoft-cp1258.enc  microsoft-win3.1.enc  mulearabic-0.enc  mulearabic-1.enc  mulearabic-2.enc  mulelao-1.enc  suneu-greek.enc  tcvn-0.enc  tis620-2.enc  viscii1.1-1.enc  xorg_font_encodings.txt
large/: .cvsignore  Makefile.am  big5.eten-0.enc  big5hkscs-0.enc  gb2312.1980-0.enc  gbk-0.enc  jisx0208.1990-0.enc  ksc5601.1987-0.enc  ksc5601.1992-3.enc  sun.unicode.india-0.enc
